Se creó con Colab

--- a/Actividad_1.ipynb
+++ b/Actividad_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNa+V1d5x/X7GAn0pL0AmPL",
+      "authorship_tag": "ABX9TyNLpmE+66wK9bUO6qUOMvXc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,12 +49,67 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "class Persona:\n",
+        "    def __init__(self, nombre, edad=0.0):\n",
+        "        self.nombre = nombre\n",
+        "        self.edad = float(edad)\n",
+        "\n",
+        "    def mostrar_edad(self):\n",
+        "        # Se aproxima al entero mas cercano\n",
+        "        print(f\"La edad de {self.nombre} es: {self.edad:.0f} años\")\n",
+        "\n",
+        "\n",
+        "class Familia:\n",
+        "    def __init__(self, edad_juan):\n",
+        "        edad_juan = float(edad_juan)\n",
+        "\n",
+        "        self.juan = Persona(\"Juan\", edad_juan)\n",
+        "        self.alberto = Persona(\"Alberto\", (2/3) * edad_juan)\n",
+        "        self.ana = Persona(\"Ana\", (4/3) * edad_juan)\n",
+        "        self.mama = Persona(\"Mamá\",\n",
+        "                            self.juan.edad +\n",
+        "                            self.alberto.edad +\n",
+        "                            self.ana.edad)\n",
+        "\n",
+        "    def mostrar_edades(self):\n",
+        "        print(\"\\nEdades de la familia:\\n\")\n",
+        "        self.juan.mostrar_edad()\n",
+        "        self.alberto.mostrar_edad()\n",
+        "        self.ana.mostrar_edad()\n",
+        "        self.mama.mostrar_edad()\n",
+        "\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    edad_juan = float(input(\"Ingrese la edad de Juan: \"))\n",
+        "    familia = Familia(edad_juan)\n",
+        "    familia.mostrar_edades()"
+      ],
       "metadata": {
-        "id": "El_y7rZQwxTj"
+        "id": "TkAkAoZS2FvV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "604f67f7-a8ee-44fb-92d7-c98d14b8139d"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese la edad de Juan: 5\n",
+            "\n",
+            "Edades de la familia:\n",
+            "\n",
+            "La edad de Juan es: 5 años\n",
+            "La edad de Alberto es: 3 años\n",
+            "La edad de Ana es: 7 años\n",
+            "La edad de Mamá es: 15 años\n"
+          ]
+        }
+      ]
     }
   ]
 }
