--- a/Actividad_1.ipynb
+++ b/Actividad_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNLpmE+66wK9bUO6qUOMvXc",
+      "authorship_tag": "ABX9TyNOGR9vtozQ7J3Dzuj/SSZF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,7 +93,7 @@
         },
         "outputId": "604f67f7-a8ee-44fb-92d7-c98d14b8139d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,6 +107,108 @@
             "La edad de Alberto es: 3 años\n",
             "La edad de Ana es: 7 años\n",
             "La edad de Mamá es: 15 años\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ejercicio 2\n",
+        "\n",
+        "Hacer un seguimiento (prueba de escritorio) del siguiente grupo de instrucciones.\n",
+        "\n",
+        "\n",
+        "```\n",
+        "INICIO\n",
+        " SUMA = 0\n",
+        "  X=20\n",
+        "  SUMA = SUMA + X\n",
+        "  Y = 40\n",
+        "  X=X+Y**2\n",
+        "  SUMA = SUMA + X/Y\n",
+        "  ESCRIBA: \"EL VALOR DE LA SUMA ES:\", SUMA\n",
+        "FIN_INICIO\n",
+        "```\n",
+        "\n",
+        "**Paso 1:** Sea X = 20, Y = 40 y SUMA = 0 inicialmente, entonces al reemplazar variables obtenemos\n",
+        "```\n",
+        "SUMA = 0 + 20 = 20\n",
+        "```\n",
+        "el nuevo valor de SUMA es 20.\n",
+        "\n",
+        "** Paso 2:** ahora procedemos reemplazando las variables en la expresión ```X=X+Y**2```\n",
+        "```\n",
+        "X = 20 + 40**2 = 1620\n",
+        "```\n",
+        "\n",
+        "El nuevo valor de X es 1620\n",
+        "\n",
+        "**Paso 3:** Finalmente calculamos ```SUMA = SUMA + X/Y ```\n",
+        "```\n",
+        "SUMA = 20 + (1620/40) = 60.5\n",
+        "```\n",
+        "\n",
+        "**Respuesta:** EL VALOR DE LA SUMA ES: 60.5"
+      ],
+      "metadata": {
+        "id": "YlmXq0ot6foX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ejercicio 3\n",
+        "\n",
+        "Un empleado trabaja 48 horas en la semana a razón de $5000 hora. El porcentaje de retención en la fuente es del 12,5% del salario bruto. Se desea saber cuál es el salario bruto. la retención en la fuente y el salario neto del trabajador."
+      ],
+      "metadata": {
+        "id": "5sxbbwXz-G0e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Empleado:\n",
+        "    def __init__(self, horas_trabajadas, valor_hora, porcentaje_retencion):\n",
+        "        self.horas = horas_trabajadas\n",
+        "        self.valor_hora = valor_hora\n",
+        "        self.porcentaje_retencion = porcentaje_retencion / 100\n",
+        "\n",
+        "    def salario_bruto(self):\n",
+        "        return self.horas * self.valor_hora\n",
+        "\n",
+        "    def retencion(self):\n",
+        "        return self.salario_bruto() * self.porcentaje_retencion\n",
+        "\n",
+        "    def salario_neto(self):\n",
+        "        return self.salario_bruto() - self.retencion()\n",
+        "\n",
+        "    def mostrar_resultados(self):\n",
+        "        print(f\"Salario Bruto: ${self.salario_bruto():.0f}\")\n",
+        "        print(f\"Retención en la fuente: ${self.retencion():.0f}\")\n",
+        "        print(f\"Salario Neto: ${self.salario_neto():.0f}\")\n",
+        "\n",
+        "\n",
+        "empleado = Empleado(48, 5000, 12.5)\n",
+        "empleado.mostrar_resultados()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TAyyYyRx_Asx",
+        "outputId": "c7db5be6-58dc-4889-f61c-672d772e473a"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Salario Bruto: $240000\n",
+            "Retención en la fuente: $30000\n",
+            "Salario Neto: $210000\n"
           ]
         }
       ]
