Se creó con Colab

--- a/Actividad_1.ipynb
+++ b/Actividad_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOGR9vtozQ7J3Dzuj/SSZF",
+      "authorship_tag": "ABX9TyOYmOadHsJVn74VW041Cv3T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,7 +121,7 @@
         "\n",
         "```\n",
         "INICIO\n",
-        " SUMA = 0\n",
+        "  SUMA = 0\n",
         "  X=20\n",
         "  SUMA = SUMA + X\n",
         "  Y = 40\n",
@@ -200,7 +200,7 @@
         "id": "TAyyYyRx_Asx",
         "outputId": "c7db5be6-58dc-4889-f61c-672d772e473a"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,6 +209,63 @@
             "Salario Bruto: $240000\n",
             "Retención en la fuente: $30000\n",
             "Salario Neto: $210000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ejercicio 4\n",
+        "\n",
+        "Elabore un algoritmo que lea un número y obtenga su cuadrado y su cubo."
+      ],
+      "metadata": {
+        "id": "Z5HEqqjgAe3Z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "class Numero:\n",
+        "    def __init__(self, valor):\n",
+        "        self.valor = float(valor)\n",
+        "\n",
+        "    def cuadrado(self):\n",
+        "        return math.pow(self.valor, 2)\n",
+        "\n",
+        "    def cubo(self):\n",
+        "        return math.pow(self.valor, 3)\n",
+        "\n",
+        "    def mostrar_resultados(self):\n",
+        "        print(\"Número:\", self.valor)\n",
+        "        print(\"Cuadrado:\", self.cuadrado())\n",
+        "        print(\"Cubo:\", self.cubo())\n",
+        "\n",
+        "\n",
+        "num = float(input(\"Ingrese un número: \"))\n",
+        "obj = Numero(num)\n",
+        "obj.mostrar_resultados()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HejopCWvCIUf",
+        "outputId": "71d6908b-71b5-4845-ba45-a908c8165753"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un número: 2\n",
+            "Número: 2.0\n",
+            "Cuadrado: 4.0\n",
+            "Cubo: 8.0\n"
           ]
         }
       ]
