Se creó con Colab

--- a/Actividad_1.ipynb
+++ b/Actividad_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYmOadHsJVn74VW041Cv3T",
+      "authorship_tag": "ABX9TyOCQsigDTH4k5ouA3B8wXw5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -266,6 +266,63 @@
             "Número: 2.0\n",
             "Cuadrado: 4.0\n",
             "Cubo: 8.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ejercicio 5\n",
+        "\n",
+        "Dado el radio de un círculo. Haga un algoritmo que obtenga el área del círculo y la longitud de la circunferencia."
+      ],
+      "metadata": {
+        "id": "f5_VQXPFCtcM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "class Circulo:\n",
+        "    def __init__(self, radio):\n",
+        "        self.radio = float(radio)\n",
+        "\n",
+        "    def calcular_area(self):\n",
+        "        return math.pi * math.pow(self.radio, 2)\n",
+        "\n",
+        "    def calcular_circunferencia(self):\n",
+        "        return 2 * math.pi * self.radio\n",
+        "\n",
+        "    def mostrar_resultados(self):\n",
+        "        print(f\"Radio: {self.radio}\")\n",
+        "        print(f\"Área: {self.calcular_area():.2f}\")\n",
+        "        print(f\"Longitud de la circunferencia: {self.calcular_circunferencia():.2f}\")\n",
+        "\n",
+        "\n",
+        "radio = float(input(\"Ingrese el radio del círculo: \"))\n",
+        "circulo = Circulo(radio)\n",
+        "circulo.mostrar_resultados()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TDwQibZyCybl",
+        "outputId": "57e75851-eeb6-4217-c9b5-850723d6c19d"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el radio del círculo: 1\n",
+            "Radio: 1.0\n",
+            "Área: 3.14\n",
+            "Longitud de la circunferencia: 6.28\n"
           ]
         }
       ]
